Acknowledgement/Credit & README.md update

--- a/lib/css/styles.css
+++ b/lib/css/styles.css
@@ -1,3 +1,10 @@
+/* 
+    Author: Abhay Tripathi
+    Description: This CSS file is used to design the Book Listig index/Home Page
+    Acknowledgment: Styles in this file were created with full guidance and support from OpenAI's ChatGPT.
+*/
+
+
 /* Reset default styles */
 * {
     margin: 0;
